<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CropAlert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Re-enter Password</string>
    <string name="mobileno">Mobile Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hi">Hi</string>
    <string name="login_failed">Login Failed</string>
    <string name="crop">Crop</string>
    <string name="disease">Disease</string>
    <string name="symptoms">Symptoms</string>
    <string name="location">Location</string>
    <string name="remedy">Remedy</string>
    <string name="harvesttime">Harvest time</string>
    <string name="search">Search</string>
    <string name="try_again_later">Server Problem,Please try again later...</string>
    <string name="username_placeholder">Your desired username</string>
    <string name="password_placeholder">Make it strong!</string>
    <string name="mobileno_placeholder">Receive SMS Alerts</string>
    <string name="passwordconfirm_placeholder">Cofirm your password</string>
    <string name="cropdiseases">Crop Diseases</string>
    <string name="noResults">No Results found.You can update the data</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="moisture">Moisture</string>
    <string name="uploadimage">Image</string>
    <string name="update">Update</string>
    <string name="updated_success">Update Successful</string>
    <string name="update_failed">Update Failed</string>
    <string name="create_account">Create Account</string>
    <string name="registration_success">Registration Successful</string>
    <string name="registration_failed">Registration Failed</string>

</resources>
