<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical">

        <TextView android:id="@+id/userLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
           />
        <EditText android:id="@+id/userName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/userLabel"
            android:layout_alignTop="@id/userLabel"
            android:maxLines="1"
            android:lines="1"
            android:nextFocusDown="@+id/password"
            android:layout_marginLeft="3dp"/>

        <TextView android:id="@+id/passwordLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_below='@id/userLabel'
            android:layout_marginTop="3dp"
            />

        <EditText android:id="@+id/password"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:layout_toRightOf="@id/passwordLabel"
            android:layout_alignTop="@id/passwordLabel"/>

        <Button android:id="@+id/login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:text="@string/login"

            android:layout_marginTop="10dp"/>





    </RelativeLayout>




</LinearLayout>