<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textSize="@dimen/abc_text_size_large_material"
        android:id="@+id/NameTitle"
        android:layout_gravity="center_horizontal" />


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        >

        <TextView android:id="@+id/locationLabel"
            android:layout_width="100dp"
            android:layout_height="@dimen/text_box_height"
            android:text="@string/location"
            />

        <TextView android:id="@+id/locationtext"
            android:layout_width="100dp"
            android:layout_height="@dimen/text_box_height"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        >

        <TextView android:id="@+id/symptomsLabel"
            android:layout_width="100dp"
            android:layout_height="@dimen/text_box_height"
            android:text="@string/symptoms"
            />

        <TextView android:id="@+id/symptomstext"
            android:layout_width="100dp"
            android:layout_height="@dimen/text_box_height"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        >

        <TextView android:id="@+id/remedyLabel"
            android:layout_width="100dp"
            android:layout_height="@dimen/text_box_height"
            android:text="@string/remedy"
            />

        <TextView android:id="@+id/remedytext"
            android:layout_width="100dp"
            android:layout_height="@dimen/text_box_height"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        >

        <TextView android:id="@+id/harvesttimeLabel"
            android:layout_width="100dp"
            android:layout_height="@dimen/text_box_height"
            android:text="@string/harvesttime"
            />

        <TextView android:id="@+id/harvesttimetext"
            android:layout_width="100dp"
            android:layout_height="@dimen/text_box_height"
            />

    </LinearLayout>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar" />

</LinearLayout>